fix: toc on safari

--- a/src/components/md/toc/index.scss
+++ b/src/components/md/toc/index.scss
@@ -1,23 +1,5 @@
-.toc-anchor.toc {
-  @apply -m-[0.1rem];
-  .toc-level {
-    @apply list-disc list-inside m-0 p-0 marker:text-base-content/10;
-    .toc-item {
-      @apply m-0 p-0 text-xs leading-3;
-      &.active {
-        @apply marker:text-base-content;
-        & li {
-          @apply marker:text-base-content/10;
-        }
-      }
-      & > a {
-        @apply hidden;
-      }
-    }
-  }
-}
-.toc-content.toc {
-  @apply pt-6 px-4 m-4 w-64 bg-base-100 rounded-box shadow-lg border-2 border-base-300;
+.toc {
+  @apply pt-6 px-4 m-1 w-64 bg-base-100 rounded-3xl shadow-lg border-2 border-base-300;
   .toc-level {
     @apply list-none px-0 m-0 mb-6;
     .toc-item {
